# NLocalSAT

./: .gitignore  README.md  buildsatutils.sh  finetuned-model.7z  gen_copy_data.py  gen_from_generator.py  gen_from_result.py  gen_gather_solution.py  gen_one_predict.py  gen_predict.py  gen_rename.py  gen_solve.py  gen_split.py  move_back.py  network.py  pretrained-model.7z  run_sat.py  sat.py  sat_predict.py  satfuncs.py  stat_result.py  verify.py
satutils/: AutoCloseFile.hpp  CMakeLists.txt  ScopedGILRelease.hpp  build.sh  gen_from_solution.cpp  gen_from_solution.hpp  satutils.cpp  split_cnf.cpp  stat_cnf.cpp
scripts/: 01_copy_data.sh  02_gen_data_1.sh  03_gen_data_2.sh  04_train.sh  05_run_1.sh  06_run_2.sh  07_run_3.sh  08_run_4.sh  09_run_5.sh  10_run_6.sh  11_run_7.sh  12_run_sparrowraw_o.sh  13_run_sparrowraw_p.sh  14_train_origin.sh  15_run_random_form.sh  16_run_direct.sh  17_train_without_normalize_form.sh  18_run_cpsparrow2riss.sh  19_run_gluhack.sh  20_run_maplelcmbt.sh  expenvs
solution_space_generator/: __init__.py  make.sh  setup.py
solution_space_generator/src/: assign.cpp  assign.hpp  batchgenerator.cpp  batchgenerator.hpp  generator_main.cpp  lit.hpp  problem.cpp  problem.hpp  py_satgenerator.cpp  py_utils.hpp  rand.hpp  satassert.cpp  satassert.hpp
solvers/CCAnr/: CMakeLists.txt  build.bash  ccanr.cpp  flip.cpp  load.cpp  main.cpp  output_sol.cpp  pick_var.cpp  predict.cpp  predict.hpp  py_utils.hpp  sat_defines.hpp.in  satbasic.cpp  satbasic.hpp  search.cpp  settings.cpp  signal_utils.cpp
solvers/CPSparrow/: CPSparrow.sh  CPSparrow_prepare.sh  CPSparrowp.sh  clean.sh
solvers/Coprocessor/: Makefile  README  VERSION  license.txt
solvers/Coprocessor/coprocessor-src/: BoundedVariableElimination.cc  BoundedVariableElimination.h  BoundedVariableEliminationParallel.cc  Bva.cc  Bva.h  CP3Config.cc  CP3Config.h  Circuit.cc  Circuit.h  ClauseElimination.cc  ClauseElimination.h  Coprocessor.cc  Coprocessor.h  CoprocessorThreads.h  CoprocessorTypes.h  Dense.cc  Dense.h  Entailed.cc  Entailed.h  EquivalenceElimination.cc  EquivalenceElimination.h  FourierMotzkin.cc  FourierMotzkin.h  HiddenTautologyElimination.cc  HiddenTautologyElimination.h  LiteralAddition.cc  LiteralAddition.h  Main.cc  Makefile  OutputFormula.cc  Probing.cc  Probing.h  Propagation.cc  Propagation.h  README  Resolving.cc  Resolving.h  Rewriter.cc  Rewriter.h  Shuffler.cc  (+21 more)
solvers/Coprocessor/core/: .kdev_include_paths  BMCwrapper.h  BoundedQueue.h  Cegar.cc  Communication.h  CoreConfig.cc  CoreConfig.h  Dimacs.h  Main.cc  Makefile  OnlineProofChecker.h  ProofMaster.h  Solver.cc  Solver.h  SolverCommunication.h  SolverTypes.h  librissc.cc  librissc.h
solvers/Coprocessor/mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Sort.h  Vec.h  XAlloc.h  template.mk
solvers/Coprocessor/scripts/: pcasso.sh
solvers/Coprocessor/simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h
solvers/Coprocessor/utils/: AutoDelete.h  Config.h  Debug.h  LockCollection.h  Options.cc  Options.h  ParseUtils.h  Statistics-mt.cc  Statistics-mt.h  System.cc  System.h
solvers/Sparrow/: license.txt  makefile  sparrow.c
solvers/YalSAT/: build.sh
solvers/YalSAT/yalsat-sc18/: cflags.h  config.c  config.h  configure.sh  main.c  makefile  mkconfig.sh  palsat  yals.c  yals.h  yalsat  yils.h
solvers/YalSATp/: starexec_build
solvers/YalSATp/yalsat-sc18/: .gitignore  FILES  LICENSE  README  main.c  makefile.in  yals.c  yals.h
solvers/probSAT/: license.txt  readme.txt  starexec_build
solvers/probSAT/code/: .gitignore  makefile  probSAT.c
